"""create driver assignment table

Revision ID: 5e1802c7fdd7
Revises: 7fba9917c652
Create Date: 2026-08-26 19:00:32.003283

"""
from alembic import op
import sqlalchemy as sa


# revision identifiers, used by Alembic.
revision = '5e1802c7fdd7'
down_revision = '9d0bb5326ed5'
branch_labels = None
depends_on = None


def upgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    op.create_table('driver_assignments',
    sa.Column('id', sa.Integer(), autoincrement=True, nullable=False),
    sa.Column('vehicle_id', sa.Integer(), nullable=False),
    sa.Column('driver_id', sa.Integer(), nullable=False),
    sa.Column('assigned_at', sa.DateTime(timezone=True), server_default=sa.text('(CURRENT_TIMESTAMP)'), nullable=False),
    sa.Column('unassigned_at', sa.DateTime(timezone=True), nullable=True),
    sa.ForeignKeyConstraint(['driver_id'], ['users.id'], ),
    sa.ForeignKeyConstraint(['vehicle_id'], ['vehicles.id'], ),
    sa.PrimaryKeyConstraint('id')
    )
    with op.batch_alter_table('driver_assignments', schema=None) as batch_op:
        batch_op.create_index(batch_op.f('ix_driver_assignments_driver_id'), ['driver_id'], unique=False)
        batch_op.create_index(batch_op.f('ix_driver_assignments_vehicle_id'), ['vehicle_id'], unique=False)

    # ### end Alembic commands ###


def downgrade():
    # ### commands auto generated by Alembic - please adjust! ###
    with op.batch_alter_table('driver_assignments', schema=None) as batch_op:
        batch_op.drop_index(batch_op.f('ix_driver_assignments_vehicle_id'))
        batch_op.drop_index(batch_op.f('ix_driver_assignments_driver_id'))

    op.drop_table('driver_assignments')
    # ### end Alembic commands ###
